fix: letter spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -122,6 +122,7 @@
     }
   body {
     @apply bg-background text-foreground;
+    letter-spacing: -0.04em;
     }
   button:not(:disabled), [role="button"]:not(:disabled) {
     cursor: pointer;
